# calaoscript

./: .gitignore  CMakeLists.txt  README.md  interpreter.cpp
calao/: CMakeLists.txt  array.hpp  class.cpp  class.hpp  definitions.hpp  dictionary.hpp  error.cpp  error.hpp  file.cpp  file.hpp  function.cpp  function.hpp  hashmap.hpp  list.cpp  list.hpp  meta.hpp  module.cpp  module.hpp  object.cpp  object.hpp  regex.cpp  regex.hpp  runtime.cpp  runtime.hpp  set.cpp  set.hpp  string.cpp  string.hpp  table.cpp  table.hpp  traits.hpp  typed_object.hpp  variant.cpp  variant.hpp
calao/internal/: ast.cpp  ast.hpp  builtins.cpp  call.hpp  class_descriptor.hpp  code.cpp  code.hpp  compiler.cpp  compiler.hpp  func_array.hpp  func_file.hpp  func_generic.hpp  func_list.hpp  func_math.hpp  func_regex.hpp  func_set.hpp  func_string.hpp  func_table.hpp  iterator.cpp  iterator.hpp  parser.cpp  parser.hpp  recycler.cpp  recycler.hpp  scanner.cpp  scanner.hpp  source_code.cpp  source_code.hpp  token.cpp  token.hpp  variant.hpp
calao/utils/: alloc.cpp  alloc.hpp  any.hpp  file_system.cpp  file_system.hpp  helpers.cpp  helpers.hpp  os.cpp  os.hpp  print.cpp  print.hpp  ref_count.hpp  span.hpp
examples/: fibonacci.calao  function_conflict.calao  reference_inconsistency.calao  table.calao
phon/: CMakeLists.txt  array.hpp  dictionary.hpp  error.cpp  meta.hpp  regex.hpp  string.cpp  traits.hpp
phon/runtime/: array.hpp  ast.cpp  ast.hpp  builtins.cpp  class.cpp  class.hpp  class_descriptor.hpp  code.cpp  code.hpp  compiler.cpp  compiler.hpp  definitions.hpp  error.hpp  file.cpp  file.hpp  func_array.hpp  func_file.hpp  func_generic.hpp  func_list.hpp  func_math.hpp  func_module.hpp  func_regex.hpp  func_set.hpp  func_string.hpp  func_system.hpp  func_table.hpp  function.cpp  function.hpp  hashmap.hpp  iterator.cpp  iterator.hpp  list.cpp  list.hpp  meta.hpp  module.cpp  module.hpp  object.cpp  object.hpp  parser.cpp  parser.hpp  (+21 more)
phon/runtime/compiler/: ast.cpp  ast.hpp  compiler.cpp  compiler.hpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  source_code.cpp  source_code.hpp  token.cpp  token.hpp
phon/utils/: alloc.cpp  alloc.hpp  any.hpp  file_system.cpp  file_system.hpp  helpers.cpp  helpers.hpp  os.cpp  os.hpp  print.cpp  print.hpp  ref_count.hpp  span.hpp
tests/: test_and_or.calao  test_break_continue.calao  test_closure.phon  test_conditional_expression.calao  test_dispatch.calao  test_foreach.calao  test_if.calao  test_inner_functions.calao  test_list_indexing.calao  test_local_redefinition.calao  test_pass_by_ref.calao  test_reference.calao  test_scope.calao  test_string.calao  test_while.calao
